[package]
name = "pybind"
version = "0.2.0"
edition = "2021"
license = "Mozilla Public License 2.0"
repository = "https://github.com/JeroenGar/jagua-rs"
authors = ["Stelmashchuk"]

[lib]
name = "nest_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
jagua-rs = { path = "../jagua-rs" }
lbf = { path = "../lbf"  }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
mimalloc = "0.1.39"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

